# RT-DETR-OpenVINO

./: .gitignore  README.md  README_cn.md  RT-DETR-OpenVINO.sln
optimize/: openvino-convert-and-optimize-rt-detr.ipynb
src/cpp/: CMakeLists.txt  main.cpp  process.cpp  rt-detr_openvino_cpp.vcxproj  rt-detr_openvino_cpp.vcxproj.filters  rtdert_predictor.cpp  rtdert_predictor.h
src/csharp/: Program.cs  RTDETRPredictor.cs  RTDETRProcess.cs  rt-detr_openvino_csharp.csproj
src/csharp/Properties/: launchSettings.json
src/python/: main.py  openvino_deploy_rtdetr.py  process.py
src/time_test/rt-detr_cpp_time_test/: main.cpp  process.cpp  process.h  rt-detr_cpp_time_test.vcxproj  rt-detr_cpp_time_test.vcxproj.filters  rtdert_predictor.cpp  rtdert_predictor.h
src/time_test/rt-detr_csharp_time_test/: Program.cs  RTDETRPredictor.cs  RTDETRProcess.cs  rt-detr_csharp_time_test.csproj
